Fix vertical align
Fix vertical align on items with one line of text

--- a/apps/settings/style/lists.css
+++ b/apps/settings/style/lists.css
@@ -51,21 +51,13 @@ ul li > label {
 
 ul li.menu-item > label,
 ul li.menu-item > a {
-  padding: 1rem 1rem 1rem 5.5rem;
   margin: -1rem -1.5rem;
   width: calc(100% + 3rem);
   display: flex;
   align-items: flex-start;
   min-height: 6rem;
+  padding: 2rem 1rem 1.8rem 5.5rem;
 }
-
-ul li.menu-item > label{
-  padding: 1.8rem 1rem 1.8rem 5.5rem;
-}
-
-/*ul li.no-desc > a{
-  padding: 2rem 1rem 2rem 5.5rem;
-}*/
 
 ul li.text-right > label,
 ul li.text-right > a {
@@ -228,7 +220,7 @@ ul li p {
   line-height: 1.9rem;
   font-weight: 400;
   margin: 0;
-  flex: 1 0 0%;
+  flex: 1 0 auto;
 }
 
 ul li p + label:not([for]) {
